# Clicker-Game

./: .gitignore
clicker_game/: Cargo.toml
clicker_game/src/: main.rs
clicker_game/src/cookie/: components.rs  mod.rs  systems.rs
clicker_game/src/debug_menu/: mod.rs  systems.rs
clicker_game/src/game/: mod.rs  systems.rs
clicker_game/src/game/cookie/: mod.rs  systems.rs
clicker_game/src/game/world/: mod.rs  resources.rs  systems.rs
clicker_game/src/main_menu/: mod.rs  styles.rs
clicker_game/src/main_menu/systems/: layout.rs
clicker_game/src/ui/: mod.rs  resources.rs  systems.rs
clicker_game/src/world/: mod.rs  systems.rs
