[package]
name = "clicker_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
bevy_window = "0.12.0"
bevy-inspector-egui = "0.21.0"
bevy_egui = "0.23.0"
egui = "0.23.0"
winit = "0.28.7"
image = "0.24.7"

